# poopy

./: .dockerignore  .env.example  manage.py  package-lock.json  package.json  pyproject.toml
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  nginx.conf  prod.Dockerfile
poopy/: gunicorn.py  urls.py  wsgi.py
poopy/feedings/: apps.py  models.py  serializers.py  urls.py  views.py
poopy/feedings/migrations/: 0001_initial.py  0002_auto_20210328_0725.py
poopy/poops/: apps.py  models.py  serializers.py  urls.py  views.py
poopy/poops/migrations/: 0001_initial.py  0002_auto_20210328_0725.py
poopy/settings/: base.py
static/ts/: Index.tsx  axiosConfig.ts
static/ts/components/: FeedingCounter.tsx  PoopCounter.tsx
templates/: index.html
